--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
 
             # Create .env file
             cat > .env << EOF
-            PORT=${{ secrets.PORT }}
+            PORT=5000
             MONGO_DB_URL=${{ secrets.MONGO_DB_URL }}
             SECRET_KEY=${{ secrets.SECRET_KEY }}
             # add other ENV vars here
